made logo link display block for IE (focus ring); sign out button contrast fix

--- a/src/scss/header/scss/header.scss
+++ b/src/scss/header/scss/header.scss
@@ -31,6 +31,9 @@
 			color: $pe-color-digital-pearson-blue;
 		}
 	}
+        .o-header__brand a {
+          display: block;
+        }
 
 	&::before,
 	&::after {
